bug: vertically center tooltip text on narrow layout

--- a/css/mathfield.less
+++ b/css/mathfield.less
@@ -323,8 +323,7 @@ scrolling to prevent the capture of hover events */
 
         /* Phone */
         @media only screen and (max-width: 767px) {
-            height: 32px;
-            padding: 4px 16px;
+            padding: 8px 16px;
             font-size: 14px;
         }
 
